# Mankua.Texturelayers

./: README.md  TextureLayers.sln
code/: 3d_geom.h  AuthBUG.txt  CCurve.cpp  CCurve.h  CMakeLists.txt  ListBoxHandler.cpp  ListBoxHandler.h  MODS.DEF  MODS.H  MODS.MAK  MTLHDR.H  Mapmod.cpp  Mapping.h  Mods.dsp  Mods.dsw  Mods.sln  Mods.vcproj  Mods.vcproj.old  Mods_vc2003.sln  Mods_vc2003.vcproj  TexLay2About.psd  TexLay2_vs2008.vcproj  TexLayWatermark.tga  TexLayWatermark.xcf  att.cpp  att.exp  att.h  att.lib  cur00002.cur  cursor2.cur  debug.cpp  e_tl_apply.cpp  load_cb.h  mods.rc  modsres.h  modsres.hm  natural_box.h  pblock.h  texlay.cpp  tl_apply.cpp  (+6 more)
code/Max2010/: CMakeLists.txt
code/Max2011/: CMakeLists.txt
code/Max2012/: CMakeLists.txt
src/: 3d_geom.cpp  CCurve.cpp  DFData.h  ListBoxHandler.cpp  MODS.CPP  Mapmod.cpp  Mapping.h  SMApplyMap.cpp  att.cpp  att.h  common.cpp  common.h  debug.h  meshdata.cpp  meshdata.h  mods.rc  modsres.h  natural_box.cpp  natural_box.h  texlay.cpp  texlay.h  texlay_mc_data.cpp  texlay_mc_data.h  tl_apply.cpp  tl_ui.cpp  undo.cpp  uv_pelt_dlg.cpp  uv_pelt_dlg.h  uvw_data.cpp  uvw_data.h  uvwgroup.h  uvwmap.cpp
src/res/: cur00001.cur  cur00005.cur  cur00006.cur  cur00007.cur  cursor1.cur
